Вносит финальные правки в стили позиционирования для страниц Студи и Портфолио

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="header">
         <div class="container">
             <nav class="navigation">
-                <a class="logo link" href="./index.html" aria-label="WebStudio" lang="en">Web<span class="logo-web">Studio</span></a>
+                <a class="logo link" href="./index.html" aria-label="WebStudio" lang="en">Web<span class="logo-reverse">Studio</span></a>
                 <ul class="navigation-list list">
                     <li class="navigation-list-item">
                         <a class="navigation-list-link link active-page" href="./index.html">Студия</a>
@@ -127,7 +127,7 @@
     <!--FOOTER-->
     <footer class="footer">
         <div class="container">
-            <a class="logo link" href="./index.html" aria-label="WebStudio" lang="en">Web<span class="logo-web">Studio</span></a>
+            <a class="logo link" href="./index.html" aria-label="WebStudio" lang="en">Web<span class="logo-reverse">Studio</span></a>
             <address class="address">
                 <p class="address-line">
                     <a class="address-main link" href="https://goo.gl/maps/fexX8swV8cYwK8N79" target="blank">г. Киев, пр-т Леси Украинки, 26</a>
